# Python-WEB-11.2-Module

./: .gitignore  py_01.py  url_names.txt
backend/src/planes/: models.py
simple-rest-api/: main.py  pyproject.toml
simple-rest-api/migrations/: env.py
simple-rest-api/migrations/versions/: 833a5d86cff9_init.py
